--- a/.gitignore
+++ b/.gitignore
@@ -21,10 +21,16 @@
 
 # virtual machine crash logs, see http://www.java.com/en/download/help/error_hotspot.xml
 hs_err_pid*
-/.idea/
 /.mvn/
 /target/
 /mvnw.cmd
 /springbatch.iml
 /mvnw
 /HELP.md
+/.idea/
+.idea/compiler.xml
+.idea/encodings.xml
+.idea/libraries/Maven__org_hamcrest_hamcrest_core_1_3.xml
+.idea/misc.xml
+.idea/modules.xml
+.idea/workspace.xml
